# barrel

./: .gitignore  LICENSE  README.md  conftest.py  embedding_cli_loadtester.py  embedding_client.py  embedding_client_voyage.py  hf_inference_server_runner_cpu.ps1  llm_client.py  llm_client_azure.py  llm_client_openai.py  main.py  manual_vector_cosine_sim.py  pyproject.toml  request_models.py  uv_commands.sh  vectordb_client.py
credentials/: dot_env_template  public.key  secrets.py
docs/: developers_guide.md
tests/: credentials_test.py  utils.py
tests/azure-docs/: az-networking-2.yaml  az-networking-5.yaml  az-networking-50.yaml  e2e_test.py  results-az-networking-1.yaml  results-az-networking-2.yaml
